--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@chakra-ui/react": "^1.8.7",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@reduxjs/toolkit": "^1.8.0",
+    "firebase": "^9.6.10",
     "framer-motion": "^6.2.8",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2"
   },
   "homepage": "./",
   "main": "src/electron-starter.js",
